--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -8,22 +8,22 @@ casper-contract = "1.4.3"
 casper-types = "1.4.6"
 
 [[bin]]
+name = "setpaymentpurse"
+path = "src/setpaymentpurse.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
+name = "prepare"
+path = "src/prepare.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
 name = "contract"
 path = "src/main.rs"
-bench = false
-doctest = false
-test = false
-
-[[bin]]
-name = "contract1"
-path = "src/main1.rs"
-bench = false
-doctest = false
-test = false
-
-[[bin]]
-name = "contract2"
-path = "src/main2.rs"
 bench = false
 doctest = false
 test = false
